fixed header overlap problem with button

--- a/themes/rise-legal/sass/_header.scss
+++ b/themes/rise-legal/sass/_header.scss
@@ -143,8 +143,9 @@
   }
 }
 .legal-btn-wrap{
-
+  margin-left: 16rem;
 }
+
 .legal-form{
   font-size: 1.6rem;
 } 
