--- a/themes/rise-legal/style.css
+++ b/themes/rise-legal/style.css
@@ -952,6 +952,9 @@ object {
     .nav-active {
       border-bottom: 3px solid #EBF0F3; } }
 
+.legal-btn-wrap {
+  margin-left: 16rem; }
+
 .legal-form {
   font-size: 1.6rem; }
 
